<resources>
    <string name="app_name">NYTimesSearch</string>
    <string name="action_settings">Settings</string>
    <string name="enter_search_query">Enter search query</string>
    <string name="search">Search</string>
    <string name="title_activity_article">ArticleActivity</string>
    <string name="begin_date">Begin Date</string>
    <string name="sort_order">Sort Order</string>
    <string name="newest">Newest</string>
    <string name="news_desk_values">News Desk\nValues</string>
    <string name="arts">Arts</string>
    <string name="fashion_and_style"><![CDATA[Fashion & Style]]></string>
    <string name="sports">Sports</string>
    <string name="save">SAVE</string>
    <string name="share">Share</string>
    <string name="filter">Filter</string>
    <string name="end_date">End Date</string>
    <string name="network_connection_issue">Network Connection Error</string>

    <string-array name="sort_orders">
        <item>Newest</item>
        <item>Oldest</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
</resources>
