<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="wrap_content">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/begin_date"
        android:id="@+id/tvBeginDate"
        android:layout_alignBottom="@+id/etBeginDate"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_margin="10dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:id="@+id/etBeginDate"
        android:focusable="false"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/textView"
        android:layout_toEndOf="@+id/textView"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/end_date"
        android:id="@+id/tvEndDate"
        android:layout_alignBottom="@+id/etEndDate"
        android:layout_margin="10dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:id="@+id/etEndDate"
        android:layout_below="@id/etBeginDate"
        android:focusable="false"
        android:layout_toRightOf="@+id/textView"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sort_order"
        android:id="@+id/tvSortOrder"
        android:layout_below="@+id/tvEndDate"
        android:layout_alignParentLeft="true"
        android:layout_toLeftOf="@+id/spnSortOrder"
        android:layout_toStartOf="@+id/spnSortOrder"
        android:layout_margin="10dp" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spnSortOrder"
        android:layout_below="@+id/etEndDate"
        android:layout_alignRight="@+id/etEndDate"
        android:layout_alignParentEnd="true"
        android:entries="@array/sort_orders"
        android:layout_alignLeft="@+id/etEndDate"
        android:layout_alignStart="@+id/etEndDate"
        android:spinnerMode="dropdown"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/news_desk_values"
        android:id="@+id/textView"
        android:layout_below="@+id/spnSortOrder"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_margin="10dp" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/arts"
        android:id="@+id/cbArts"
        android:checked="false"
        android:layout_below="@+id/spnSortOrder"
        android:layout_toRightOf="@+id/textView"
        android:layout_toEndOf="@+id/textView"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fashion_and_style"
        android:id="@+id/cbFashion"
        android:checked="false"
        android:layout_below="@+id/cbArts"
        android:layout_alignLeft="@+id/cbArts"
        android:layout_alignStart="@+id/cbArts"
        android:layout_marginRight="10dp" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sports"
        android:id="@+id/cbSports"
        android:checked="false"
        android:layout_below="@+id/cbFashion"
        android:layout_alignLeft="@+id/cbFashion"
        android:layout_alignStart="@+id/cbFashion"
        android:layout_marginRight="10dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:id="@+id/btnSave"
        android:layout_below="@+id/cbSports"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"/>

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnBeginDateClear"
        android:layout_alignBottom="@+id/etBeginDate"
        android:layout_alignTop="@+id/etBeginDate"
        android:layout_toRightOf="@+id/etBeginDate"
        android:layout_alignParentRight="true"
        android:layout_toEndOf="@+id/etBeginDate"
        android:scaleType="fitCenter"
        android:src="@drawable/clear_icon"
        />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnEndDateClear"
        android:layout_alignBottom="@+id/etEndDate"
        android:layout_alignTop="@+id/etEndDate"
        android:layout_toRightOf="@+id/etEndDate"
        android:layout_toEndOf="@+id/etEndDate"
        android:layout_alignParentRight="true"
        android:scaleType="fitCenter"
        android:src="@drawable/clear_icon"
        />

</RelativeLayout>